--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,25 @@
-.hello {
-    color:red;
+li {
+    display: inline;
 }
+
+#container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
+}
+
+
+
+#header {
+    background-color: rgba(0, 0, 0, .65);
+    border: solid black 1px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    
+}
+
